# threadlight-skills

./: .gitignore  CHANGELOG.md  README.md  THREADLIGHT.md  plugin.json  threadlight-experience.html
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  secret_scanning.yml
.github/plugin/: marketplace.json
.github/workflows/: docs-blueprint.yml  pages-cache-bust.yml  python-pytest.yml  threadlight-e2e-foundry.yml
.playwright-mcp/: page-2026-06-16T09-48-01-021Z.yml  page-2026-06-16T10-09-24-093Z.yml
docs/: IDEA-TO-PRODUCTION-WORKBOOK.md  KRATOS-BRIDGE.md  WORKSHOP-1H-QUICKSTART.md  _config.yml  _devserve.py  blueprint.html  case-study.html  customize.html  demo.html  efficiency.html  eu-ai-act-evidence.md  explorer.html  funnel.html  index.html  industries.html  production-readiness.md  production.html  self-improving.html  skills.html  workbook.html
docs/assets/: blueprint-logic.js  blueprint.js  demo-reel.js  explorer.css  explorer.js  industries.js  process-library.json  site.css  site.js
docs/ci/: pages-cache-bust.md  python-pytest.md  router-validation.md  self-improving-loop.md  sync_cache_bust.py  threadlight-e2e-setup.md  threadlight-e2e.md
examples/: README.md
examples/returns-triage-governed/: .gitignore  AGENTS.md  README.md  agent.yaml  azure.yaml  policy.yaml  returns-triage.agt-policy.yaml
examples/returns-triage-governed/src/agent/: Dockerfile  container.py  copilot-instructions.md  mcp-config.json  pyproject.toml
examples/returns-triage-governed/src/agent/config/: returns-triage.json
examples/returns-triage-governed/src/agent/skills/disposition-decision/: SKILL.md
examples/returns-triage-governed/src/agent/skills/fraud-escalation/: SKILL.md
examples/returns-triage-governed/src/agent/skills/intake-validation/: SKILL.md
examples/returns-triage-governed/src/agent/skills/policy-eligibility/: SKILL.md
scripts/: build-cowork-zips.sh  build_process_library.py
scripts/ci/: check-skill-description-length.py  foundry-strong-arm.sh  router-subset.sh  skill-discovery-smoke.sh
skills/threadlight-auto/: SKILL.md
skills/threadlight-cicd/: SKILL.md
skills/threadlight-consumption-iq/: SKILL.md
skills/threadlight-customize/: SKILL.md
skills/threadlight-deploy/: SKILL.md
skills/threadlight-design/: SKILL.md
skills/threadlight-evals/: SKILL.md
skills/threadlight-event-triggers/: SKILL.md
skills/threadlight-event-triggers/references/scaffolds/aca-consumer/: Dockerfile  README.md  local.test.py  pyproject.toml  receiver.bicep  receiver.py
skills/threadlight-event-triggers/references/scaffolds/aca-job-cron/: Dockerfile  README.md  local.test.py  pyproject.toml  receiver.bicep  receiver.py
skills/threadlight-event-triggers/references/scaffolds/aca-job-manual/: Dockerfile  README.md  local.test.py  pyproject.toml  receiver.bicep  receiver.py
skills/threadlight-govern/: SKILL.md
skills/threadlight-hitl-patterns/: SKILL.md
skills/threadlight-local-test/references/quickstart/: pyproject.toml
skills/threadlight-local-test/references/quickstart/tests/: test_discover.py
skills/threadlight-local-test/references/quickstart/threadlight_quickstart/: _sample_data.py  agent_wiring.py  discover.py  stub_tools.py
(+500 files in other folders)
