[project]
name = "returns-triage-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core==1.3.0",
    "agent-framework-foundry==1.3.0",
    "agent-framework-foundry-hosting>=1.0.0a260421",
    "azure-identity>=1.19.0,<1.26.0a0",
    "mcp>=1.10.0",
    "python-dotenv>=1.0.0",
    "azure-monitor-opentelemetry>=1.6.4",
    "opentelemetry-sdk>=1.27.0",
]

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
prerelease = "if-necessary-or-explicit"

[tool.setuptools]
packages = []
