[project]
name = "threadlight_quickstart"
version = "0.1.1"
description = "Pattern 0 quickstart for a threadlight-designed PoC — MAF Agent + SkillsProvider + JSON stub tools + Streamlit UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "awesome-gbb contributors" }]
dependencies = [
    "agent-framework~=1.9.0",
    "azure-identity~=1.21.0",
    "streamlit~=1.40.0",
]

[project.optional-dependencies]
foundry = ["agent-framework[foundry]~=1.9.0"]
aoai = ["agent-framework[openai]~=1.9.0"]
test = ["pytest~=8.3.0"]

[project.scripts]
threadlight-quickstart = "threadlight_quickstart.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["threadlight_quickstart"]
