[project]
name = "trigger-aca-consumer"
version = "0.1.0"
description = "Threadlight ACA Consumer (KEDA) trigger receiver — idempotent Service Bus consumer."
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=2.0.0",
    "azure-identity>=1.19.0",
    "azure-cosmos>=4.9.0",
    "azure-servicebus>=7.12.0",
]

# uv-managed. Local dev:  uv sync  &&  uv run python receiver.py
# For Event Hubs / Event Grid / Cosmos change feed / Kafka, swap the client
# dependency here and the pull loop in receiver.py (see README).
