[project]
name = "trigger-aca-job-cron"
version = "0.1.0"
description = "Threadlight ACA Job (cron) trigger receiver — idempotent scheduled agent invoker."
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=2.0.0",
    "azure-identity>=1.19.0",
    "azure-cosmos>=4.9.0",
    "azure-storage-queue>=12.12.0",
]

# uv-managed. Local dev:  uv sync  &&  uv run python receiver.py
# Container build installs from this file (see Dockerfile).
